# lightspeed

./: CMakeLists.txt  README.md
include/: quaternion.h  texture.h  utility.h  vector.h  vertex.h
include/component/: acceleration_component.h  body_component.h  camera_component.h  model_component.h  player_component.h  timeline_component.h
include/event/: finalize_event.h  initialize_event.h  keyboard_event.h  mouse_button_event.h  mouse_position_event.h  relativistic_update_event.h  render_event.h
include/internal/: opengl.h
include/system/: acceleration_system.h  movement_system.h  player_system.h  relativistic_update_system.h  render_system.h  timeline_system.h
shader/: .render_pass.vert.swp  .render_relativistic.vert.swp  CMakeLists.txt  render_relativistic.frag  render_relativistic.vert
src/: CMakeLists.txt  main.cpp  quaternion.cpp  vector.cpp
src/system/: acceleration_system.cpp  movement_system.cpp  player_system.cpp  relativistic_update_system.cpp  render_system.cpp
